Add jaeger datastore in default backends.

--- a/tools-helm-configs/grafana-values.yaml
+++ b/tools-helm-configs/grafana-values.yaml
@@ -524,6 +524,15 @@ datasources:
       isDefault: false
       editable: true
 
+    - name: Jaeger
+      type: jaeger
+      access: browser
+      orgId: 1
+      uid: jaeger
+      url: http://jaeger-query.observability.svc.cluster.local:80
+      isDefault: false
+      editable: true
+
     - name: Loki
       type: loki
       access: browser
