--- a/tools/telegraf/telegraf-ds-master.yaml
+++ b/tools/telegraf/telegraf-ds-master.yaml
@@ -38,23 +38,30 @@ data:
      totalcpu = true
      collect_cpu_time = false
      report_active = false
+       fieldpass = ["usage_user", "usage_system", "usage_idle", "usage_active", "usage_nice", "usage_iowait", "usage_irq", "usage_softirq", "usage_steal", "usage_guest", "usage_guest_nice"]
    [[inputs.disk]]
      ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs", "loop*"]
+     fieldpass = ["free", "used", "total", "used_percent"]
    [[inputs.diskio]]
      devices = ["sda", "sdb", "sdc"]
+     fieldpass = ["read_time", "write_time", "reads", "writes", "io_time"]
    [[inputs.mem]]
+     fieldpass = ["available", "free", "total", "used_percent"]
    [[inputs.net]]
      interfaces= ["eth*", "ens*"]
      ignore_protocol_stats= true
    [[inputs.system]]
+     fieldpass = ["load1", "load5", "load15"]
    [[inputs.temp]]
    [[inputs.intel_powerstat]]
-   [[inputs.kube_inventory]]
-     url = "https://$HOSTIP:6443"
-     bearer_token_string = "$TELEGRAF_TOKEN"
-     resource_include = [ "pods", "deployments", "daemonsets", "services", "statefulsets" ]
-     namespace = ""
-     insecure_skip_verify = true
+     package_metrics = ["current_power_consumption", "current_dram_power_consumption", "thermal_design_power"]
+     cpu_metrics = ["cpu_frequency", "cpu_temperature"]
+    [[inputs.kube_inventory]]
+      url = "https://$HOSTIP:6443"
+      bearer_token_string = "$TELEGRAF_TOKEN"
+      resource_include = [ "pods", "deployments", "daemonsets", "services", "statefulsets" ]
+      namespace = ""
+      insecure_skip_verify = true
 
 ---
 # Section: Daemonset
