--- a/tools/telegraf/telegraf-ds-worker.yaml
+++ b/tools/telegraf/telegraf-ds-worker.yaml
@@ -8,12 +8,12 @@ metadata:
 data:
   telegraf.conf: |+
     [agent]
-      interval= "10s"
+      interval= "1s"
       round_interval= true
       metric_batch_size= 1000
       metric_buffer_limit= 10000
       collection_jitter= "0s"
-      flush_interval= "10s"
+      flush_interval= "1s"
       flush_jitter= "0s"
       precision= ""
       debug= false
@@ -44,15 +44,20 @@ data:
       totalcpu = true
       collect_cpu_time = false
       report_active = false
+      fieldpass = ["usage_user", "usage_system", "usage_idle", "usage_active", "usage_nice", "usage_iowait", "usage_irq", "usage_softirq", "usage_steal", "usage_guest", "usage_guest_nice"]
     [[inputs.disk]]
       ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs", "loop*"]
+      fieldpass = ["free", "used", "total", "used_percent"]
     [[inputs.diskio]]
       devices = ["sda", "sdb", "sdc"]
+      fieldpass = ["read_time", "write_time", "reads", "writes", "io_time"]
     [[inputs.mem]]
+      fieldpass = ["available", "free", "total", "used_percent"]
     [[inputs.net]]
       interfaces= ["eth*", "ens*"]
       ignore_protocol_stats= true
     [[inputs.system]]
+      fieldpass = ["load1", "load5", "load15"]
     [[inputs.temp]]
     [[inputs.intel_powerstat]]
       package_metrics = ["current_power_consumption", "current_dram_power_consumption", "thermal_design_power"]
@@ -61,28 +66,7 @@ data:
       url = "https://$HOSTIP:10250"
       bearer_token_string = "$TELEGRAF_TOKEN"
       insecure_skip_verify = true
-        
-    [[processors.starlark]]
-      order = 1
-      namepass = ["kubernetes_pod_container"]
-    
-      ##[[processors.starlark.tagpass]]
-      ##  pod_name = ["kc-nm-deployment-*"]   
-      
-      ##  Measurement = "kubernetes_pod_container_memory_working_set_bytes"
-      ## The Starlark source can be set as a string in this configuration file, or
-      ## by referencing a file containing the script.  Only one source or script
-      ## should be set at once.
-    
-       ## Source of the Starlark script.
-       source = '''
-    def apply(metric):
-      if metric.fields["memory_usage_bytes"] >= 10000000:
-          # removing all fields deletes a metric
-          print("hello", "world", sep=", ")
-          print('Suspicious value')
-      return metric 
-    '''
+      namepass = ["kubernetes_pod_container", "kubernetes_pod_volume", "kubernetes_pod_network"]
 
 #    [[aggregators.minmax]]
 #      period = "10s"        # send & clear the aggregate every 30s.
