Use relative path to helm configs. Update loki installation part.

--- a/helm-configs/loki-values.yaml
+++ b/helm-configs/loki-values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: grafana/loki
-  tag: 2.5.0
+  tag: 2.6.1
   pullPolicy: IfNotPresent
 
   ## Optionally specify an array of imagePullSecrets.
@@ -126,6 +126,8 @@ config:
 extraArgs: {}
   # log.level: debug
 
+extraEnvFrom: []
+
 livenessProbe:
   httpGet:
     path: /ready
@@ -153,6 +155,7 @@ persistence:
   accessModes:
   - ReadWriteOnce
   size: 10Gi
+  labels: {}
   annotations: {}
   # selector:
   #   matchLabels:
@@ -200,6 +203,9 @@ securityContext:
   runAsNonRoot: true
   runAsUser: 10001
 
+containerSecurityContext:
+  readOnlyRootFilesystem: true
+
 service:
   type: ClusterIP
   nodePort:
@@ -220,6 +226,11 @@ terminationGracePeriodSeconds: 4800
 ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
 tolerations: []
 
+## Topology spread constraint for multi-zone clusters
+## ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-topology-spread-constraints/
+topologySpreadConstraints:
+  enabled: false
+
 # The values to set in the PodDisruptionBudget spec
 # If not set then a PodDisruptionBudget will not be created
 podDisruptionBudget: {}
@@ -236,6 +247,8 @@ serviceMonitor:
   annotations: {}
   # scrapeTimeout: 10s
   # path: /metrics
+  scheme: null
+  tlsConfig: {}
   prometheusRule:
     enabled: false
     additionalLabels: {}
@@ -319,7 +332,7 @@ extraPorts: []
 env: []
 
 # Specify Loki Alerting rules based on this documentation: https://grafana.com/docs/loki/latest/rules/
-# When specified, you also need to add a ruler config section above. An example is shown in the alerting docs.
+# When specified, you also need to add a ruler config section above. An example is shown in the rules docs.
 alerting_groups: []
 #  - name: example
 #    rules:
