--- a/install-desk/main.yaml
+++ b/install-desk/main.yaml
@@ -54,13 +54,13 @@
       kubernetes.core.k8s:
         kubeconfig: /home/aida/.kube/config
         state: present
-        src: /home/aida/AIDA-Distributed-Observability-Framework/namespaces/create-namespaces.yaml
+        src: "{{ playbook_dir }}/../namespaces/create-namespaces.yaml"
 
     - name: Create kubernetes persistent volumes
       kubernetes.core.k8s:
         kubeconfig: /home/aida/.kube/config
         state: present
-        src: /home/aida/AIDA-Distributed-Observability-Framework/persistent-volumes/create-persistent-volume.yaml
+        src: "{{ playbook_dir }}/../persistent-volumes/create-persistent-volume.yaml"
 
     - name: Add Zookeeper and Kafka Helm repo
       kubernetes.core.helm_repository:
@@ -74,7 +74,7 @@
         chart_ref: bitnami/kafka
         release_namespace: observability
         values_files:
-          - /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/kafka-values.yaml
+          - "{{ playbook_dir }}/../helm-configs/kafka-values.yaml"
 
     - name: Add Elasticsearch Helm repo
       kubernetes.core.helm_repository:
@@ -88,7 +88,7 @@
         chart_ref: elastic/elasticsearch
         release_namespace: observability
         values_files:
-          - /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/elasticsearch-values.yaml
+          - "{{ playbook_dir }}/../helm-configs/elasticsearch-values.yaml"
 
     - name: Add Prometheus Helm repo
       kubernetes.core.helm_repository:
@@ -102,24 +102,25 @@
         chart_ref: prometheus-community/prometheus
         release_namespace: observability
         values_files:
-          - /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/prometheus-values.yaml
+          - "{{ playbook_dir }}/../helm-configs/prometheus-values.yaml"
 
     - name: Add Grafana Helm repo
       kubernetes.core.helm_repository:
         name: grafana
         repo_url: "https://grafana.github.io/helm-charts"
 
-    #    - name: Install Loki using Helm
-    #      kubernetes.core.helm:
-    #        kubeconfig: /home/aida/.kube/config
-    #        name: loki
-    #        chart_ref: grafana/loki
-    #        release_namespace: observability
-    #        values_files:
-    #          - /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/loki-values.yaml
-
     - name: Install Loki using Helm
-      ansible.builtin.shell: helm upgrade --install loki -n=observability -f /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/loki-values.yaml grafana/loki
+      kubernetes.core.helm:
+        kubeconfig: /home/aida/.kube/config
+        name: loki
+        chart_ref: grafana/loki
+        chart_version: 2.16.0
+        release_namespace: observability
+        values_files:
+          - "{{ playbook_dir }}/../helm-configs/loki-values.yaml"
+
+    #- name: Install Loki using Helm
+    #  ansible.builtin.shell: helm upgrade --install loki -n=observability -f "{{ playbook_dir }}/../helm-configs/loki-values.yaml" --version 2.16.0 grafana/loki
 
     #    - name: Install Tempo using Helm
     #      kubernetes.core.helm:
@@ -128,7 +129,7 @@
     #        chart_ref: grafana/tempo
     #        release_namespace: observability
     #        values_files:
-    #          - /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/tempo-values.yaml
+    #          - "{{ playbook_dir }}/../helm-configs/tempo-values.yaml"
 
     - name: Install Grafana using Helm
       kubernetes.core.helm:
@@ -137,18 +138,19 @@
         chart_ref: grafana/grafana
         release_namespace: observability
         values_files:
-          - /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/grafana-values.yaml
+          - "{{ playbook_dir }}/../helm-configs/grafana-values.yaml"
 
-    #    - name: Install Promtail using Helm
-    #      kubernetes.core.helm:
-    #        kubeconfig: /home/aida/.kube/config
-    #        name: promtail
-    #        chart_ref: grafana/promtail
-    #        release_namespace: measurement
-    #        values_files:
-    #          - /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/promtail-values.yaml
     - name: Install Promtail using Helm
-      ansible.builtin.shell: helm upgrade --install promtail -n=measurement -f /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/promtail-values.yaml grafana/promtail
+      kubernetes.core.helm:
+        kubeconfig: /home/aida/.kube/config
+        name: promtail
+        chart_ref: grafana/promtail
+        release_namespace: measurement
+        values_files:
+          - "{{ playbook_dir }}/../helm-configs/promtail-values.yaml"
+
+    #- name: Install Promtail using Helm
+    #  ansible.builtin.shell: helm upgrade --install promtail -n=measurement -f /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/promtail-values.yaml grafana/promtail
 
     #    - name: Deploy Telegraf Agent
     #      kubernetes.core.k8s:
@@ -165,25 +167,25 @@
       kubernetes.core.k8s:
         kubeconfig: /home/aida/.kube/config
         state: present
-        src: /home/aida/AIDA-Distributed-Observability-Framework/tools/telegraf/telegraf-serviceaccount.yaml
+        src: "{{ playbook_dir }}/../tools/telegraf/telegraf-serviceaccount.yaml"
 
     - name: Deploy Telegraf Agent on Workers Node
       kubernetes.core.k8s:
         kubeconfig: /home/aida/.kube/config
         state: present
-        src: /home/aida/AIDA-Distributed-Observability-Framework/tools/telegraf/telegraf-ds-worker.yaml
+        src: "{{ playbook_dir }}/../tools/telegraf/telegraf-ds-worker.yaml"
 
     - name: Deploy Telegraf Agent on Master Node
       kubernetes.core.k8s:
         kubeconfig: /home/aida/.kube/config
         state: present
-        src: /home/aida/AIDA-Distributed-Observability-Framework/tools/telegraf/telegraf-ds-master.yaml
+        src: "{{ playbook_dir }}/../tools/telegraf/telegraf-ds-master.yaml"
 
     - name: Deploy Kafka consumers
       kubernetes.core.k8s:
         kubeconfig: /home/aida/.kube/config
         state: present
-        src: /home/aida/AIDA-Distributed-Observability-Framework/tools/kafka-consumers/kc-nm-deployment.yaml
+        src: "{{ playbook_dir }}/../tools/kafka-consumers/kc-nm-deployment.yaml"
 
     - name: Add Jaeger Helm repo
       kubernetes.core.helm_repository:
@@ -197,4 +199,4 @@
         chart_ref: jaegertracing/jaeger
         release_namespace: observability
         values_files:
-          - /home/aida/AIDA-Distributed-Observability-Framework/helm-configs/jaeger-values.yaml
+          - "{{ playbook_dir }}/../helm-configs/jaeger-values.yaml"
