--- a/install-desk/main.yaml
+++ b/install-desk/main.yaml
@@ -90,6 +90,9 @@
         values_files:
           - "{{ playbook_dir }}/../helm-configs/elasticsearch-values.yaml"
 
+    - name: Wait for Pods to start
+      ansible.builtin.shell: sleep 30
+
     - name: Add Prometheus Helm repo
       kubernetes.core.helm_repository:
         name: prometheus-community
@@ -162,6 +165,9 @@
     #        - "/home/aida/AIDA-Distributed-Observability-Framework/tools/telegraf/telegraf-ds-worker.yaml"
     #        - "/home/aida/AIDA-Distributed-Observability-Framework/tools/telegraf/telegraf-ds-master.yaml"
     #        #src: /home/aida/AIDA-Distributed-Observability-Framework/tools/telegraf/telegraf-serviceaccount.yaml
+
+    - name: Wait for Pods to start
+      ansible.builtin.shell: sleep 30
 
     - name: Create Telegraf Service
       kubernetes.core.k8s:
