--- a/tools/telegraf/telegraf-ds-master.yaml
+++ b/tools/telegraf/telegraf-ds-master.yaml
@@ -62,6 +62,11 @@ data:
       resource_include = [ "pods", "deployments", "daemonsets", "services", "statefulsets" ]
       namespace = ""
       insecure_skip_verify = true
+    [[inputs.kubernetes]]
+      url = "https://$HOSTIP:10250"
+      bearer_token_string = "$TELEGRAF_TOKEN"
+      insecure_skip_verify = true
+      namepass = ["kubernetes_pod_container", "kubernetes_pod_volume", "kubernetes_pod_network"]
 
 ---
 # Section: Daemonset
