--- a/persistent-volumes/create-persistent-volume.yaml
+++ b/persistent-volumes/create-persistent-volume.yaml
@@ -51,6 +51,56 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  name: pg-pv-1
+spec:
+  capacity:
+    storage: 8Gi
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  local:
+    path: /opt/kafka
+  claimRef:
+    namespace: thingsboard
+    name: data-thingsboard-pg-postgresql-0
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - worker2
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: rabbitmq-pv-1
+spec:
+  capacity:
+    storage: 5Gi
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  local:
+    path: /opt/kafka
+  claimRef:
+    namespace: observability
+    name: data-rabbitmq-0
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - observability1
+          -
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
   name: prometheus-pv-1
 spec:
   capacity:
