--- a/tools/telegraf/telegraf-ds-worker.yaml
+++ b/tools/telegraf/telegraf-ds-worker.yaml
@@ -17,7 +17,7 @@ data:
       flush_jitter= "0s"
       precision= ""
       debug= false
-      quiet= false
+      quiet= true
       logfile= ""
       hostname= "$HOSTNAME"
       omit_hostname= false
@@ -32,12 +32,18 @@ data:
     [[outputs.prometheus_client]]
           ## Address to listen on.
           listen = ":9126"
-  
-    [[outputs.socket_writer]]
+    
+    [[outputs.amqp]]
       namepass = ["kubernetes_pod_container"]
-      ## URL to connect to
-      keep_alive_period = "5m"
-      address = "tcp://localhost:65432"
+      brokers = ["amqp://rabbitmq-headless.observability.svc.cluster.local:5672"]
+      exchange = "telegraf"
+      exchange_type = "direct"
+      exchange_durability = "transient"
+      routing_key = "telegraf-kubernetes"
+      auth_method = "PLAIN"
+      username = "user"
+      password = "user"
+      headers = {"database" = "telegraf", "retention_policy" = "default"}
                    
     [[inputs.cpu]]
       percpu = true
@@ -68,6 +74,11 @@ data:
       insecure_skip_verify = true
       namepass = ["kubernetes_pod_container", "kubernetes_pod_volume", "kubernetes_pod_network"]
 
+
+#    [[outputs.execd]]
+#      namepass = ["kubernetes_pod_container"]
+#      command = ["python3", "/data-analyzer.py"]
+
 #    [[aggregators.minmax]]
 #      period = "10s"        # send & clear the aggregate every 30s.
 #      drop_original = false  # drop the original metrics.
@@ -96,8 +107,8 @@ spec:
         - name: edge-metrics-analyzer
           image: usman476/telegraf-data-analyzer:latest
           command: [ "python3" ]
-          args: [ "data-analyzer.py", "-n", "uc1", "-a", "app-1-pod", "-m", "memory_usage_bytes", "-v", "50000000" ]
-          imagePullPolicy: "IfNotPresent"
+          args: [ "data-analyzer.py", "-n", "uc1", "-a", "app-1-pod", "-m", "memory_usage_bytes", "-v", "50000000", "-r", "amqp://user:user@rabbitmq-headless.observability.svc.cluster.local:5672/%2F" ]
+          imagePullPolicy: "Always"
           resources:
             limits:
               memory: 100Mi
@@ -123,13 +134,13 @@ spec:
           #  - "--user telegraf:$(stat -c '%g' /var/run/docker.sock)"
           resources:
             limits:
-              memory: 200Mi
+              memory: 150Mi
             requests:
               cpu: 200m
-              memory: 100Mi
-          securityContext:
-            runAsUser: 1001
-            runAsGroup: 1001
+              memory: 50Mi
+          #securityContext:
+          #  runAsUser: 1001
+          #  runAsGroup: 1001
           env:
             - name: HOSTIP
               valueFrom:
