--- a/helm-configs/jaeger-values.yaml
+++ b/helm-configs/jaeger-values.yaml
@@ -18,6 +18,9 @@ allInOne:
   image: jaegertracing/all-in-one
   pullPolicy: IfNotPresent
   extraEnv: []
+  # command line arguments / CLI flags
+  # See https://www.jaegertracing.io/docs/cli/
+  args: []
   # samplingConfig: |-
   #   {
   #     "default_strategy": {
@@ -26,7 +29,25 @@ allInOne:
   #     }
   #   }
   ingress:
-    enabled: true
+    enabled: false
+    # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
+    # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
+    # ingressClassName: nginx
+    annotations: {}
+    labels: {}
+    # Used to create an Ingress record.
+    # hosts:
+    #   - chart-example.local
+    # annotations:
+    #   kubernetes.io/ingress.class: nginx
+    #   kubernetes.io/tls-acme: "true"
+    # labels:
+    #   app: jaeger
+    # tls:
+    #   # Secrets must be manually created in the namespace.
+    #   - secretName: chart-example-tls
+    #     hosts:
+    #       - chart-example.local
   # resources:
   #   limits:
   #     cpu: 500m
@@ -74,7 +95,7 @@ storage:
     user: elastic
     usePassword: false
     password: changeme
-    indexPrefix: jaeger
+    # indexPrefix: test
     ## Use existing secret (ignores previous password)
     # existingSecret:
     # existingSecretKey:
@@ -88,10 +109,12 @@ storage:
       # - name: ES_INDEX_PREFIX
       #   value: test
     ## ES related cmd line opts to be configured on the concerned components
-    cmdlineParams: {}
+    cmdlineParams:
       # es.server-urls: http://elasticsearch-master:9200
       # es.username: elastic
       # es.index-prefix: test
+      es.version: 7
+      es.create-index-templates: "false"
   kafka:
     brokers:
       - kafka:9092
@@ -307,6 +330,7 @@ collector:
   dnsPolicy: ClusterFirst
   extraEnv: []
   cmdlineParams: {}
+  basePath: /
   replicaCount: 1
   autoscaling:
     enabled: false
@@ -321,6 +345,8 @@ collector:
     # List of IP ranges that are allowed to access the load balancer (if supported)
     loadBalancerSourceRanges: []
     type: ClusterIP
+    # Cluster IP address to assign to service. Set to None to make service headless
+    clusterIP: ""
     grpc:
       port: 14250
       # nodePort:
@@ -440,6 +466,7 @@ collector:
 
 query:
   enabled: true
+  basePath: /
   oAuthSidecar:
     enabled: false
     image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.0
@@ -526,7 +553,8 @@ query:
     automountServiceAccountToken: false
     name:
     annotations: {}
-  nodeSelector: {}
+  nodeSelector:
+    kubernetes.io/hostname: observability1
   tolerations: []
   affinity: {}
   podAnnotations: {}
