Use the latest version of containerd to avoid Kubernetes errors.

--- a/kubernetes/containerd/install_dependencies_all_nodes.yaml
+++ b/kubernetes/containerd/install_dependencies_all_nodes.yaml
@@ -46,16 +46,23 @@
         state: present
         filename: 'kubernetes'
 
-    - name: Add Docker apt-key
+    - name: Create keyrings directory
+      file:
+        path: /etc/apt/keyrings
+        state: directory
+
+    - name: Add Docker's apt-key
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
+        keyring: /etc/apt/keyrings/docker.gpg
         state: present
 
     - name: Add Docker's APT repository
       apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
+        repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
         state: present
         filename: 'docker'
+        update_cache: true
 
     - name: Install kubeadm, kubelet and containerd.io
       ansible.builtin.package:
@@ -67,7 +74,7 @@
     - name: Hold tools
       command: apt-mark hold kubelet kubeadm
 
-    - name: Grant permissio for Telegraf to get metrics
+    - name: Grant permission for Telegraf to get metrics
       command: chmod -R a+rx /sys/devices/virtual/powercap/intel-rapl/
 
     - name: Add the overlay module
