Add a task to enable kube-proxy.

--- a/kubernetes/containerd/init_cni_k8s_cluster.yaml
+++ b/kubernetes/containerd/init_cni_k8s_cluster.yaml
@@ -37,3 +37,7 @@
 #      args:
 #        chdir: $HOME
 #        creates: pod_network_setup.txt
+
+#    - name: Enable kube-proxy, if needed (e.g., in case disabled when creating cluster and later want to deploy a CNI with flannel)
+#      become: yes
+#      shell: kubeadm init phase addon kube-proxy  --kubeconfig ~/.kube/config
