Define/use node labels to set affinity rules when scheduling pods.

--- a/data-access-apps/es-data-querier-job.yaml
+++ b/data-access-apps/es-data-querier-job.yaml
@@ -22,7 +22,7 @@ spec:
           name: querier-volume
       restartPolicy: Never
       nodeSelector:
-        kubernetes.io/hostname: observability-vm-1
+        appstype: observability
       volumes:
       - name: querier-volume
         hostPath:
