--- a/helm-configs/kibana-values.yaml
+++ b/helm-configs/kibana-values.yaml
@@ -159,7 +159,7 @@ readinessProbe:
 
 imagePullSecrets: []
 nodeSelector:
-  kubernetes.io/hostname: observability-vm-1
+  appstype: observability
 tolerations: []
 affinity: {}
 
