--- a/helm-configs/grafana-values.yaml
+++ b/helm-configs/grafana-values.yaml
@@ -244,7 +244,7 @@ resources: {}
 ## ref: https://kubernetes.io/docs/user-guide/node-selection/
 #
 nodeSelector:
-  kubernetes.io/hostname: observability1
+  appstype: observability
 
 ## Tolerations for pod assignment
 ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
