--- a/helm-configs/kiali-values.yaml
+++ b/helm-configs/kiali-values.yaml
@@ -58,7 +58,7 @@ deployment:
     time_field_format: "2006-01-02T15:04:05Z07:00"
     sampler_rate: "1"
   node_selector:
-    kubernetes.io/hostname: observability-vm-1
+    appstype: observability
   pod_annotations: {}
   pod_labels: {}
   priority_class_name: ""
