--- a/helm-configs/loki-values.yaml
+++ b/helm-configs/loki-values.yaml
@@ -144,7 +144,7 @@ client: {}
 
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
 nodeSelector:
-  kubernetes.io/hostname: observability1
+  appstype: observability
 
 ## ref: https://kubernetes.io/docs/concepts/storage/persistent-volumes/
 ## If you set enabled as "True", you need :
