Upgrade to the latest version of Jaeger.

--- a/helm-configs/jaeger-values.yaml
+++ b/helm-configs/jaeger-values.yaml
@@ -48,6 +48,7 @@ allInOne:
     #   - secretName: chart-example-tls
     #     hosts:
     #       - chart-example.local
+    pathType:
   # resources:
   #   limits:
   #     cpu: 500m
@@ -61,8 +62,11 @@ storage:
   # allowed values (cassandra, elasticsearch)
   type: elasticsearch
   cassandra:
-    host: cassandra-headless.uc1.svc.cluster.local
+    host: cassandra-headless.observability.svc.cluster.local
     port: 9042
+    # Change this value to false if you want to avoid starting the
+    # -cassandra-schema Job
+    schemaJobEnabled: true
     tls:
       enabled: false
       secretName: cassandra-tls-secret
@@ -92,6 +96,7 @@ storage:
     scheme: http
     host: es-master-headless.observability.svc.cluster.local
     port: 9200
+    anonymous: false
     user: elastic
     usePassword: false
     password: changeme
@@ -115,6 +120,9 @@ storage:
       # es.index-prefix: test
       es.version: 7
       es.create-index-templates: "false"
+    tls:
+      enabled: false
+      secretName: es-tls-secret
   kafka:
     brokers:
       - bitnami-kafka-headless.observability.svc.cluster.local:9092
@@ -190,7 +198,7 @@ schema:
 elasticsearch: {}
 
 ingester:
-  enabled: true
+  enabled: false
   podSecurityContext: {}
   securityContext: {}
   annotations: {}
@@ -204,6 +212,7 @@ ingester:
     enabled: false
     minReplicas: 2
     maxReplicas: 10
+    behavior: {}
     # targetCPUUtilizationPercentage: 80
     # targetMemoryUtilizationPercentage: 80
   service:
@@ -337,6 +346,7 @@ collector:
     enabled: false
     minReplicas: 1
     maxReplicas: 3
+    behavior: {}
     # targetCPUUtilizationPercentage: 80
     # targetMemoryUtilizationPercentage: 80
   service:
@@ -391,6 +401,7 @@ collector:
       # - secretName: chart-example-tls
       #   hosts:
       #     - chart-example.local
+    pathType:
   resources: {}
     # limits:
     #   cpu: 1
@@ -464,6 +475,7 @@ collector:
     # -- ServiceMonitor metric relabel configs to apply to samples before ingestion
     # https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#endpoint
     metricRelabelings: []
+  initContainers: []
 
 query:
   enabled: true
@@ -539,6 +551,7 @@ query:
       # - secretName: chart-example-tls
       #   hosts:
       #     - chart-example.local
+    pathType:
     health:
       exposed: false
   resources: {}
@@ -603,7 +616,7 @@ spark:
   image: jaegertracing/spark-dependencies
   imagePullSecrets: []
   tag: latest
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   cmdlineParams: {}
   extraEnv: []
   schedule: "49 23 * * *"
@@ -642,7 +655,7 @@ esIndexCleaner:
   annotations: {}
   image: jaegertracing/jaeger-es-index-cleaner
   imagePullSecrets: []
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   cmdlineParams: {}
   extraEnv: []
     # - name: ROLLOVER
@@ -685,7 +698,7 @@ esRollover:
   image: jaegertracing/jaeger-es-rollover
   imagePullSecrets: []
   tag: latest
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   cmdlineParams: {}
   extraEnv:
     - name: CONDITIONS
@@ -735,7 +748,7 @@ esLookback:
   image: jaegertracing/jaeger-es-rollover
   imagePullSecrets: []
   tag: latest
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   cmdlineParams: {}
   extraEnv:
     - name: UNIT
@@ -777,7 +790,7 @@ hotrod:
   replicaCount: 1
   image:
     repository: jaegertracing/example-hotrod
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
     pullSecrets: []
   service:
     annotations: {}
@@ -802,6 +815,7 @@ hotrod:
       # - secretName: chart-example-tls
       #   hosts:
       #     - chart-example.local
+    pathType:
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
